fix topMenu oculta el titulo a partir de 700px para evitar un overflow

--- a/frontend/cafeteria-app/astro-pedidos/src/components/TopMenu/Header.module.css
+++ b/frontend/cafeteria-app/astro-pedidos/src/components/TopMenu/Header.module.css
@@ -190,6 +190,9 @@ Version: 1.0
   .hamburger[aria-expanded="true"] .bar3 {
     transform: translateY(-8px) rotate(-45deg);
   }
+  .title {
+    display: none;
+  }
 }
 
 #cartLink {
